--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
     <link rel="stylesheet" href="css/slider.css">  
     <script src="https://kit.fontawesome.com/b7164c86a4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/responsive.css">
-    <script src="javascript/script.js"></script>
 </head>
 <body>
     <header>
         <div class="header-wrapper">
             <a href="index.html"><img class="dodge-logo" src="images/logo/dodge-logo.png" alt="dodge-logo"></a>
-            <nav class="navigation-wrapper" id="navigation-links-id">
+            <nav class="navigation-wrapper" id="navigationlinksid">
                 <ul class="main-navigation">
                     <li class="main-list home active">
                         <a href="index.html" class="main-list-home lists active">HOME</a>
@@ -41,7 +40,7 @@
                     </li>
                 </ul>
             </nav>
-            <div class="burger-wrapper" id="burger-wrapper-id">
+            <div class="burger-wrapper" id="burgerwrapperid">
                 <i class="fas fa-bars navigation-bar"></i>
             </div>
         </div>
@@ -166,5 +165,6 @@
         </div>
     </footer>
 <script src="javascript/slider.js"></script> <!--სლაიდერის ჯავასკრიპტის source ფაილი-->
+<script src="javascript/script.js"></script> <!--მობილური ნავიგაციის სკრიპტ source ფაილი-->
 </body>
 </html>
