--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div class="form-wrapper">
                 <form action="#" method="post">
                         <label for="message"></label>
-                        <textarea name="message" id="message" placeholder="Type Your Mesaage"></textarea>
+                        <textarea name="message" id="message" placeholder="Type Your Message"></textarea>
                         <div class="empty-div-for-form">
                             <!-- ცარიელი დივი ფორმების სფეისინგისათვის -->
                         </div>
