--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <script src="https://kit.fontawesome.com/b7164c86a4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/responsive.css">
 </head>
-<body>
+<body id="header-scroll">
     <header>
         <div class="header-wrapper">
             <a href="index.html"><img class="dodge-logo" src="images/logo/dodge-logo.png" alt="dodge-logo"></a>
             <nav class="navigation-wrapper" id="navigationlinksid">
                 <ul class="main-navigation">
                     <li class="main-list home active">
-                        <a href="index.html" class="main-list-home lists active">HOME</a>
+                        <a href="#header-scroll" class="main-list-home lists active">HOME</a>
                     </li>
                     <li class="main-list our-vehicles">
                         <a href="#our-vehicles-id" class="main-list-our-vehicles lists">OUR VEHICLES</a>
