--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
         </div>
     </section>
-    <section class="oem-parts-section" id="oem-parts-id"> <!--ორიგინალი ნაწილების სექცია-->
+    <section class="oem-parts-section=" id="oem-parts-id"> <!--ორიგინალი ნაწილების სექცია-->
         <h3 class="oem-parts-heading">MOPAR OEM PARTS</h3>
         <p class="oem-parts-paragraph">ORIGINAL EQUIPMENT MANUFACTURER PARTS</p>
         <div class="oem-parts-wrapper"> <!--ორიგინალი ნაწილების მშობელი დივი-->
@@ -165,6 +165,7 @@
         <div class="copyright-div">
             <i class="far fa-copyright copyright-icon"></i>
         </div>
+        <a href="https://www.dodge.com/" target="_blank"><p class="official-web-site">THE OFFICIAL WEBSITE OF DODGE (CLICK)</p></a>
     </footer>
 <script src="javascript/slider.js"></script> <!--სლაიდერის ჯავასკრიპტის source ფაილი-->
 <script src="javascript/script.js"></script> <!--მობილური ნავიგაციის სკრიპტ source ფაილი-->
