--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
         <div class="copyright-div">
             <i class="far fa-copyright copyright-icon"></i>
         </div>
-        <a href="https://www.dodge.com/" target="_blank"><p class="official-web-site">THE OFFICIAL WEBSITE OF DODGE (CLICK)</p></a>
-        <a href="https://www.pennzoil.com/#iframe=L3NvcHVzL3Blbm56b2lsL25ld3NsZXR0ZXI" target="_blank"><p class="official-web-site">THE OFFICIAL WEBSITE OF PENNZOIL (CLICK)</p></a>
+        <a href="https://www.dodge.com/" target="_blank"><p class="official-web-site official-10px">THE OFFICIAL WEBSITE OF DODGE (CLICK)</p></a>
+        <a href="https://www.pennzoil.com/#iframe=L3NvcHVzL3Blbm56b2lsL25ld3NsZXR0ZXI" target="_blank"><p class="official-web-site official-10px">THE OFFICIAL WEBSITE OF PENNZOIL (CLICK)</p></a>
         <a href="https://www.mopar.com/en-us.html" target="_blank"><p class="official-web-site mopar-official">THE OFFICIAL WEBSITE OF MOPAR (CLICK)</p></a>
     </footer>
 <script src="javascript/slider.js"></script> <!--სლაიდერის ჯავასკრიპტის source ფაილი-->
